Save The New Preapared Data Set csv

--- a/notebooks/01_dataset_analysis.ipynb
+++ b/notebooks/01_dataset_analysis.ipynb
@@ -3397,7 +3397,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#This will save the dataset without the raws indeces \n",
+    "data_frame.to_csv(r'../artifacts/Prepared_laptop_price.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
